--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@types/node": "^18.16.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
