--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,58 @@
 {
   "compilerOptions": {
     "target": "es2021",
-    "lib": ["es5", "dom", "dom.iterable", "esnext"],
+    "lib": [
+      "es5",
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "typeRoots": ["./src/@types", "./node_modules/@types"],
+    "typeRoots": [
+      "./src/@types",
+      "./node_modules/@types"
+    ],
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "baseUrl": "src",
-    "incremental": true
+    "baseUrl": ".",
+    "incremental": true,
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ],
+      "@components/*": [
+        "./src/components/*"
+      ],
+      "@providers/*": [
+        "./src/providers/*"
+      ],
+      "@lib/*": [
+        "./src/lib/*"
+      ],
+      "~/*": [
+        "./assets/*"
+      ]
+    }
   },
-  "include": ["src", "**/*.ts", "**/*.tsx", "tailwind.config.ts"],
-  "exclude": ["node_modules"],
-  "moduleResolution": ["node_modules", "node"]
+  "include": [
+    "src",
+    "**/*.ts",
+    "**/*.tsx",
+    "tailwind.config.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ],
+  "moduleResolution": [
+    "node_modules",
+    "node"
+  ]
 }
