--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "baseUrl": "src",
-    "incremental": true
+    "baseUrl": ".",
+    "incremental": true,
+    "paths": {
+      "@/*": ["./src/*"],
+      "@components/*": ["./src/components/*"],
+      "~/*": ["./assets/*"]
+    }
   },
   "include": ["src", "**/*.ts", "**/*.tsx", "tailwind.config.ts"],
   "exclude": ["node_modules"],
