--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "prepare": "husky install",
     "lint": "eslint src/**/*.{ts,tsx}",
     "lint:fix": "eslint --fix src/**/*.{ts,tsx}",
-    "format": "prettier --write src/**/*.{ts,tsx} --config ./.prettierrc"
+    "format": "prettier --write src/**/*.{ts,tsx} --config ./.prettierrc",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
@@ -23,6 +25,14 @@
     "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.10",
+    "@storybook/addon-interactions": "^7.0.10",
+    "@storybook/addon-links": "^7.0.10",
+    "@storybook/addon-styling": "^1.0.6",
+    "@storybook/blocks": "^7.0.10",
+    "@storybook/react": "^7.0.10",
+    "@storybook/react-vite": "^7.0.10",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@types/node": "^18.16.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -38,7 +48,10 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^8.0.0",
     "lint-staged": "^13.1.0",
+    "postcss": "^8.4.23",
     "prettier": "^2.8.4",
+    "prop-types": "^15.8.1",
+    "storybook": "^7.0.10",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
