--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-dom": "^18.2.0",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "^3.3.2",
+    "vite-plugin-svgr": "^3.2.0",
+    "vite-svg-loader": "^4.0.0",
     "yup": "^1.0.2"
   },
   "devDependencies": {
@@ -33,6 +35,7 @@
     "@storybook/react": "^7.0.10",
     "@storybook/react-vite": "^7.0.10",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@svgr/webpack": "^8.0.1",
     "@types/node": "^18.16.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
