--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
       "./src/@types",
       "./node_modules/@types"
     ],
+    "types": [
+      "vite-plugin-svgr/client"
+    ],
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
